--- a/app/src/components/styles/product.css
+++ b/app/src/components/styles/product.css
@@ -1,81 +1,101 @@
 .visible-products {
-    overflow-y: scroll;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 10px;
-    width: 99%;
-    margin: 0 auto;
+  overflow-y: scroll;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 10px;
+  width: 99%;
+  margin: 0 auto;
 }
+
 @media (min-width: 1271px) {
-    .product {
-        width: 290px !important;
-    }
-    .visible-products {
-        width: 1290px !important; /* plus gaps (60) */
-        
-    }
+  .product {
+    width: 290px !important;
   }
+
+  .visible-products {
+    width: 1290px !important;
+    /* plus gaps (60) */
+
+  }
+}
+
 @media (max-width: 1270px) {
-    .visible-products {
-      grid-template-columns: repeat(3, 1fr);
-    }
+  .visible-products {
+    grid-template-columns: repeat(3, 1fr);
   }
-  
-  @media (max-width: 900px) {
-    .visible-products {
-      grid-template-columns: repeat(2, 1fr);
-    }
+}
+
+@media (max-width: 900px) {
+  .visible-products {
+    grid-template-columns: repeat(2, 1fr);
   }
-  @media (max-width: 700px) {
-    .visible-products {
-      grid-template-columns: 1fr;
-      width: 100%;
-    }
+}
+
+@media (max-width: 700px) {
+  .visible-products {
+    grid-template-columns: 1fr;
+    width: 100%;
   }
+}
+
 .product {
-    padding: 20px;
-    min-height: 475px;
-    width: 100%;
-    display: flex;
-    flex-flow: column;
+  padding: 20px;
+  min-height: 475px;
+  width: 100%;
+  display: flex;
+  flex-flow: column;
 }
+
 .product a {
-    display: block;
-    margin-top: 20px;
-    font-size: 24px;
-    font-weight: bolder;
-    color: black;
+  display: block;
+  margin-top: 20px;
+  font-size: 24px;
+  font-weight: bolder;
+  color: black;
 }
+
 .product .shortdescription {
-    flex-grow: 1;
+  flex-grow: 1;
 }
+
 .product p {
-    margin-top: 10px;
-    width: 100%;
+  margin-top: 10px;
+  width: 100%;
 }
 
 .product .img {
-    overflow: hidden;
-    width: 100%;
-    height: 200px;
-    text-align: center;
-}
-.product .img img {
-    height: 100%;
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 200px;
+  text-align: center;
+  pointer-events: none;
 }
 
-.product .title {
+.product .img img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+padding: 10px;
+max-width: 100%;
+max-height: 100%;
+width: auto;
+height: auto;
 }
+
+.product .title {}
 
 .product .price {
-    margin-top: 10px;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  margin-top: 10px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
+
 .product .price button {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .singleProduct {
@@ -85,29 +105,36 @@
   flex-flow: column;
   gap: 20px;
 }
+
 .productInfo {
   padding-left: 30px;
   border-left: 1px solid black;
 }
+
 @media (min-width: 1200px) {
   .productInfo {
     width: 750px;
   }
 }
+
 .productInfo p {
   margin-top: 20px;
   font-size: 18px;
 }
+
 .productDetails {
   display: flex;
   gap: 20px;
 }
+
 .productImage {
   height: 325px;
 }
+
 .productImage img {
   height: 100%;
 }
+
 .loading {
   height: 100%;
   display: flex;
